--- a/alpha/accounts/templates/accounts/_account_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_events_table.html
@@ -75,4 +75,8 @@
     <a class="facebook-event-link" target="_blank" data-type="facebook_event_link">
         <img src="{{ STATIC_URL }}images/facebook-icon-mini.png" />
     </a>
+    <div id="choice-window">
+        <h1>Hello</h1>
+        <input type="button" value="Button" onclick="console.debug(123434)" />
+    </div>
 </div>
