--- a/alpha/advertising/templates/advertising/campaign/deposit_funds.html
+++ b/alpha/advertising/templates/advertising/campaign/deposit_funds.html
@@ -2,6 +2,7 @@
 {% load i18n %} 
 {% load url from future %} 
 {% load dictionary_tags %}
+{% load setup_advertising %}
 
 {% block title %}
     {% blocktrans with profile.user.username as username %}
@@ -16,6 +17,7 @@
     <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
 
     <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/tabs.js"></script>
     <script src="{{STATIC_URL}}js/advertising/total-price-calculation.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/advertising/advertising-fund-page.js" type="text/javascript"></script>
 {% endblock %}
@@ -58,110 +60,7 @@
                             Your already spent {{ campaign.ammount_spent }} from {{ campaign.budget }}.
                         </p>                        
                     </div>
-                    <div class="pay-now-header">
-                        Deposit Funds for Advertising
-                    </div>
-                    <div class="pay-now-widget">                        
-                        <div class="info">
-                            <div class="budget">
-                                <table>
-                                    <tr>
-                                        <td>Budget(CAD):</td>
-                                        <td>
-                                            <input type="text" id="id_budget" name="order_budget" value="0.0">
-
-                                            <input type="hidden" name="order_budget_currency" value="CAD">
-                                        </td>
-                                        <td>
-                                            <a href="javascript:void;" class="balloon">
-                                                <div class="buttonq"></div>
-                                            </a>
-                                            <div class="balloon-content">
-                                                <h3>
-                                                    Help - Advertising Campaign
-                                                    <i>[Budget]:</i>
-                                                </h3>
-                                                <p>
-                                                    Budget for campaign
-                                                </p>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <table class="taxes">
-                                {% if account_taxes %}                                
-                                    {% for tax in account_taxes %}
-                                        <tr class="tax-row">
-                                            <td>
-                                                <input type="hidden" value="{{ tax.tax }}" class="tax-input">
-                                                {{ tax.name }} ({{ tax.pretty_tax }}%):
-                                            </td>
-                                            <td>
-                                                C$<span class="tax-price">
-                                                    0
-                                                </span>                                                
-                                            </td>
-                                        </tr>                                        
-                                    {% endfor %}                                
-                                {% endif %}
-                                <tr class="total-price-row">
-                                    <td>
-                                        Total:
-                                    </td>
-                                    <td>
-                                        C$<span class="total-price-output">
-                                            0
-                                        </span>                                        
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="choose-payment-system">
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="checkbox">
-                                            <input id="payment_paypal_id" type="radio" name="payment_system" value="paypal" checked="checked" >
-                                            <label for="payment_paypal_id"></label>
-                                            <label for="payment_paypal_id">
-                                                <img src="{{ STATIC_URL }}/images/featured/paypal.png"/>
-                                            </label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="checkbox disabled">
-                                            <input id="payment_visa_id" type="radio" name="payment_system" value="visa" disabled>
-                                            <label for="payment_visa_id"></label>
-                                            <label for="payment_visa_id">
-                                                <img src="{{ STATIC_URL }}/images/featured/visa.png"/>
-                                            </label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="checkbox disabled">
-                                            <input id="payment_email_money_id" type="radio" name="payment_system" value="email_money_transfer" disabled>
-                                            <label for="payment_email_money_id"></label>
-                                            <label for="payment_email_money_id">
-                                                <img src="{{ STATIC_URL }}/images/featured/email_money_transfer.png"/>
-                                            </label>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="checkbox disabled">
-                                            <input id="payment_master_card_id" type="radio" name="payment_system" value="master_card" disabled>
-                                            <label for="payment_master_card_id"></label>
-                                            <label for="payment_master_card_id">
-                                                <img src="{{ STATIC_URL }}/images/featured/master_card.png"/>
-                                            </label>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
+                    {% setup_advertising_payments %}
                     <div class="pay-now-footer">
                         <input type="submit" name="submitoptions" class="button standart submit" value="Save" />
                     </div>
