changing of the FAQ

--- a/alpha/home/templates/pages/faq.html
+++ b/alpha/home/templates/pages/faq.html
@@ -13,8 +13,26 @@
                     <div class="inner-content">
                         <ul class="entries-list">
                             <li>
-                                <div class="list-entry-title" data-type="entry_title">What is a featured ad?</div>
+                                <div class="list-entry-title" data-type="entry_title">What is Cityfusion?</div>
                                 <div class="list-entry-text first" data-type="entry_text">
+                                    What we at Cityfusion are trying to do is bring together all events that are in your area to make it easier to know and find these events.  Often there are many main venues holding events but you, as an individual, have to spend considerable time surfing around to find what is happening at these venues.  Bringing them all together in one convenient location will cut down on the frustration of hunting down events in your area.  Plus, you will likely find many events you had no idea were available in the first place.  Too many times we see something in the paper after it has happened and say, "I didn't know about that, I'd have loved to go!".
+                                </div>
+                            </li>
+                            <li>
+                                <div class="list-entry-title" data-type="entry_title">Who can post events?</div>
+                                <div class="list-entry-text" data-type="entry_text">
+                                    Anyone who is hosting or performing an event that is open to the public is welcome to post.  A large venue can post their events, fundraisers that are having gala's or other activities (fun runs etc), bars that are having bands play, bands that are performing, and you as an individual if you're having a steak knight to raise funds, if it's open to the public we want it on Cityfusion.  I suppose some exceptions do arise, garage sales aren't really something we want on the site unless you're having a huge block sale.  If there is enough demand for garage sales we would most likely create a separate page for it.  The one thing we do ask is to make certain your event isn't already posted.  For example if a night club posted the band that is playing, then the band themselves doesn't need to post.  This saves on duplicating.
+                                </div>
+                            </li>
+                            <li>
+                                <div class="list-entry-title" data-type="entry_title">What does it cost to post?</div>
+                                <div class="list-entry-text" data-type="entry_text">
+                                    Not a thing, it is completely free.
+                                </div>
+                            </li>
+                            <li>
+                                <div class="list-entry-title" data-type="entry_title">What is a featured ad?</div>
+                                <div class="list-entry-text" data-type="entry_text">
                                     A Featured Ad is a way to have your events seen.  First create the event, and then on your accounts page, click “Make Featured Event.”  This will take you to a page where you can pay to have your event featured.  It costs $2.00 per day and runs until the end of the last day you chose.  Your event will be featured on the home page and will also be sent via peoples emails.
                                 </div>
                             </li>
