--- a/alpha/accounts/templates/accounts/_account_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_events_table.html
@@ -1,5 +1,6 @@
 {% load endless %}
 {% load event_tags %}
+{% load common_tags %}
 
 {% paginate 6 events using "account_events" %}
 
@@ -14,6 +15,9 @@
         {% endfor %}
     </select>
     <input type="button" value="Execute" class="button standart submit" data-id="execute_button" />
+    <div>
+        <a href="javascript:void(0);" data-id="select_all_button">Select / Deselect all</a><br/><br/>
+    </div>
     {% for event in events %}
         <div class="entry-info {% if not event.is_featured %}with-all-actions{% else %}without-make-feature-action{% endif %}"
              data-type="event_item"
@@ -48,6 +52,7 @@
     <div class="profile-table-pagination">
         <span class="pagintation-wrapper">
             {% get_pages %}
+
             {% if pages.current.is_first %}
                 <span class="prev"></span>
             {% else %}
@@ -62,7 +67,7 @@
             {% else %}
                 <a class="next" href="{{ pages.next.url }}"></a>
             {% endif %}
-        </span>        
+        </span>
     </div>
 {% endif %}
 <div data-type="hidden_elements" style="display:none;">
