adding hintbox in the FB posting

--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -336,6 +336,28 @@
     margin-left: 3px;
 }
 
+.entry-wrapper .buttonq {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.hintbox{ /*CSS for pop up hint box */
+    position: absolute;
+    background-color: #f7f7f7;
+    width: 230px; /*Default width of hint.*/
+    border:1px solid #d6d6d6;
+    font-size: 11px;
+    font-weight:normal;
+    line-height:14px;
+    z-index:100;
+    visibility: hidden;
+    color:#454545;
+}
+
+.hintbox p{
+    padding: 5px 10px 10px 10px;
+}
+
 .account-options h3 .buttonq.mini {
     top: 16px;
     margin-left: 5px;
