--- a/alpha/accounts/templates/accounts/_account_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_events_table.html
@@ -15,6 +15,14 @@
         {% endfor %}
     </select>
     <input type="button" value="Execute" class="button standart submit" data-id="execute_button" />
+    <a href="javascript:void;" class="balloon">
+        <div class="buttonq"></div>
+    </a>
+    <div class="balloon-content" style="display:none;">
+        <p>
+            Due to limitations of Facebook, you may wish to adjust your event in Facebook. If Facebook fixes these issues we will incorporate them. eg: event location and Event photo.
+        </p>
+    </div>
     <div>
         <a href="javascript:void(0);" data-id="select_all_button">Select / Deselect all</a><br/><br/>
     </div>
