--- a/alpha/accounts/templates/accounts/_account_featured_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_featured_events_table.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="entry-details-wrapper">
                         <div class="title">
-                            <a href="{% url 'event_view' event.event_day.slug event.event_day.start_time|date:"Y-m-d" %}">
+                            <a href="{% event_link event.event_day %}">
                                 {{ event.event_day.name }}&nbsp;
                             </a>
                         </div>
